--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,79 @@
-contourpy==1.3.1
+asttokens==3.0.0
+beautifulsoup4==4.12.3
+certifi==2024.12.14
+charset-normalizer==3.4.1
+comm==0.2.2
+contourpy==1.3.0
 cycler==0.12.1
-fonttools==4.55.0
+debugpy==1.8.12
+decorator==5.1.1
+exceptiongroup==1.2.2
+executing==2.2.0
+filelock==3.13.1
+fonttools==4.55.8
+fsspec==2024.6.1
+gdown==5.2.0
+idna==3.10
+importlib_metadata==8.6.1
+importlib_resources==6.5.2
+ipykernel==6.29.5
+ipython==8.18.1
+jedi==0.19.2
+Jinja2==3.1.4
+jupyter_client==8.6.3
+jupyter_core==5.7.2
 kiwisolver==1.4.7
-matplotlib==3.9.2
-numpy==2.1.3
+MarkupSafe==2.1.5
+matplotlib==3.9.4
+matplotlib-inline==0.1.7
+mpmath==1.3.0
+nest-asyncio==1.6.0
+networkx==3.2.1
+numpy==1.26.3
+nvidia-cublas-cu12==12.6.4.1
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvrtc-cu12==12.6.77
+nvidia-cuda-runtime-cu12==12.6.77
+nvidia-cudnn-cu12==9.5.1.17
+nvidia-cufft-cu12==11.3.0.4
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.6.3
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvtx-cu12==12.6.77
 packaging==24.2
+pandas==2.2.3
+parso==0.8.4
+pexpect==4.9.0
 pillow==11.0.0
-pyparsing==3.2.0
+platformdirs==4.3.6
+prompt_toolkit==3.0.50
+psutil==6.1.1
+ptyprocess==0.7.0
+pure_eval==0.2.3
+Pygments==2.19.1
+pyparsing==3.2.1
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
-six==1.16.0
+pytz==2025.1
+pyzmq==26.2.1
+requests==2.32.3
+scipy==1.13.1
+six==1.17.0
+soupsieve==2.6
+stack-data==0.6.3
+sympy==1.13.1
+torch==2.6.0+cu126
+torchaudio==2.6.0+cu126
+torchvision==0.21.0+cu126
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+triton==3.2.0
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
+wcwidth==0.2.13
+zipp==3.21.0
